--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,7 +25,7 @@ jobs:
       run: go build -o email2mattermost
 
     - name: Release
-      uses: upload-artifact@v4
+      uses: actions/upload-artifact@v4
       with:
         name: bin
         path: email2mattermost
